# WaveFunctionCollapser

./: Cargo.toml  readme.md
src/: main.rs
src/components/: canvas_component.rs  image_canvas_component.rs  tile_creation_component.rs
